# splatnet-ping

./: Cargo.toml  README.md  settings.txt  settings_notoken.txt  settings_wrongformat.txt
src/: main.rs
