[package]
name = "splatnet_ping"
version = "1.0.0"
authors = ["snowpoke <snowpoke@snowpoke.ink>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
simplelog = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking"] }